# fastapi-example

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/: config.py  exceptions.py  main.py  models.py
src/history/: service.py
src/receipts/: auth.py  enum.py  models.py  router.py  schemas.py  utils.py
