[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
opencv-python-headless = "^4.7.0.72"
python-multipart = "^0.0.6"
pip = "^23.0.1"
alembic = "^1.11.1"
numpy = "^1.24.3"
httpx = "^0.24.1"
openai = "^0.27.8"
sqlalchemy = "^2.0.19"
pydantic-settings = "^2.0.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"